# Car-Functionality-System

./: .gitignore  CMakeLists.txt  CarFunctionalitySystem_Documentation.docx  UML(class) diagram.docx  main.cpp
src/: Car.cpp  Car.h
test/: CarTest.cpp
